# clin_data_tools

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: conda-ci.yml
clin_data_tools/: __init__.py  check_col.py
conda/: meta.yaml
src/clin_data_tools/: check_col.py  utils.py
tests/: test_check_col.py
